fix anchor color in safari dark mode

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -23,6 +23,10 @@
     padding: 4px 6px;
     border-radius: 10px;
   }
+
+  .prose a {
+    color: #fff;
+  }
 }
 
 body {
